Remove realms from dashboard items and dashboard links (for now) Added NewsItemMapper Improved oracle and mysql sql Changed API methods for adding objects, retrieving objects, etc.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312830 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -8,55 +8,104 @@ select.things = select * from PROJECT_THINGS
 
 insert.thing = insert into PROJECT_THINGS (TITLE) values (?)
 
+create.CalendarItem.table = create table if not exists dash_calendar_item ( id bigint not null auto_increment, \
+calendar_time datetime not null, title varchar(255) not null, access_url varchar(1024) not null, \
+entity_ref varchar(300) not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
+create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
+create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
-## context table
-create.Context.table = create table dash_context ( id bigint(11) not null auto_increment primary key, context_id varchar(255) not null, context_url varchar(1024) not null, context_title varchar(255) not null ); 
-create unique index dash_context_idx on dash_context (context_id);
+insert.CalendarItem = insert into dash_calendar_item (calendar_time, title , access_url, entity_ref, entity_type, context_id) values (?, ?, ?, ?, ?, ?)
 
-insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?);
+select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id \
+join dash_sourcetype st on st.id=ci.entity_type where ci.id=?
 
+select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
+join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
-select.Context.by.id = select * from dash_context where id=?;
-select.Context.by.contextId = select * from dash_context where context_id=?;
+exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
-## news item table
-create.NewsItem.table = create table dash_news_item ( id bigint(11) not null auto_increment primary key, news_time timestamp(0), title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type bigint(11) not null, context_id bigint(11) not null, realm_id bigint(11) not null );  
-create index dash_news_time_idx on dash_news_item (news_time);  
-create unique index dash_news_entity_idx on dash_news_item (entity_ref);
+exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
 
-insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, entity_type, context_id, realm_id) values (?, ?, ?, ?, ?, ?, ?);
+create.CalendarLink.table = create table if not exists dash_calendar_link ( id bigint not null auto_increment, \
+person_id bigint not null, context_id bigint not null, item_id bigint not null, hidden bit default 0, \
+sticky bit default 0, unique (person_id, context_id, item_id), primary key (id) ); \
+create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
-## news link table
-create.NewsLink.table = create table dash_news_link ( id bigint(11) not null auto_increment primary key, person_id bigint(11) not null, context_id bigint(11) not null, item_id bigint(11) not null, realm_id bigint(11), hidden tinyint(1) default 0, sticky tinyint(1) default 0, unique (person_id, context_id, item_id) );  
-create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky);
+insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id) values \
+(?, ?, ?)
 
-insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, realm_id) values (?, ?, ?, ?);
+create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
+context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
+create unique index dash_context_idx on dash_context (context_id)
 
-## person table
-create.Person.table = create table dash_person ( id bigint(11) not null auto_increment primary key,user_id varchar(99) not null,sakai_id varchar(99) );  
-create unique index dash_person_user_id_idx on dash_person (user_id);  
-create unique index dash_person_sakai_id_idx on dash_person (sakai_id);
+insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
 
-insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?);
+select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
 
-select.Person.by.id = select * from dash_person where id=?;
-select.Person.by.userId = select * from dash_person where user_id=?;
-select.Person.by.sakaiId = select * from dash_person where sakai_id=?;
+select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
 
-## realm table
-create.Realm.table = create table dash_realm ( id bigint(11) not null auto_increment primary key, realm_id varchar(255) not null );  
-create unique index dash_realm_idx on dash_realm (realm_id);
+create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
+title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type bigint not null, \
+context_id bigint not null, primary key (id) ); \
+create index dash_news_time_idx on dash_news_item (news_time); \
+create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 
-insert.Realm = insert into dash_realm (realm_id) values (?)
+insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, entity_type, context_id) \
+values (?, ?, ?, ?, ?, ?)
 
-select.Realm.by.id = select * from dash_realm where id=?;
-select.Realm.by.realmId = select * from dash_realm where realm_id=?;
+select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_news_item ni join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type where ni.id=?
 
-## resouce type table 
-create.SourceType.table = create table dash_sourcetype ( id bigint(11) not null auto_increment primary key, source_type varchar(255) not null );  
-create unique index dash_source_idx on dash_sourcetype (source_type); 
+select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_news_item ni join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
 
-insert.SourceType = insert into dash_sourcetype (source_type) values (?)
+create.NewsLink.table = create table if not exists dash_news_link ( id bigint not null auto_increment, person_id bigint not null, \
+context_id bigint not null, item_id bigint not null, hidden bit default 0, sticky bit default 0, \
+unique (person_id, context_id, item_id), primary key (id) ); \
+create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
 
-select.SourceType.by.id = select * from dash_sourcetype where id=?;
-select.SourceType.by.sourcetype = select * from dash_sourcetype where source_type=?;
+insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id) values (?, ?, ?)
+
+create.Person.table = create table if not exists dash_person ( id bigint not null auto_increment,user_id varchar(99) not null,\
+sakai_id varchar(99), primary key (id) ); \
+create unique index dash_person_user_id_idx on dash_person (user_id); \
+create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
+
+insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?)
+
+select.Person.by.id = select * from dash_person where id=?
+
+select.Person.by.userId = select * from dash_person where user_id=?
+
+select.Person.by.sakaiId = select * from dash_person where sakai_id=?
+
+create.SourceType.table = create table if not exists dash_sourcetype ( id bigint not null auto_increment, identifier varchar(255) not null, \
+access_permission varchar(255), primary key (id) ); \
+create unique index dash_source_idx on dash_sourcetype (identifier)
+
+insert.SourceType = insert into dash_sourcetype (identifier, access_permission) values (?, ?)
+
+select.SourceType.by.id = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
+from dash_sourcetype st where id=?
+
+select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
+from dash_sourcetype st where identifier=?
+
