Fixed various create-methods to return updated objects. Fixed more of the SQL
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312832 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -39,8 +39,8 @@ person_id bigint not null, context_id bigint not null, item_id bigint not null, 
 sticky bit default 0, unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
-insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id) values \
-(?, ?, ?)
+insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id, hidden, sticky) values \
+(?, ?, ?, ?, ?)
 
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
 context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
@@ -82,7 +82,7 @@ context_id bigint not null, item_id bigint not null, hidden bit default 0, stick
 unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
 
-insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id) values (?, ?, ?)
+insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
 
 create.Person.table = create table if not exists dash_person ( id bigint not null auto_increment,user_id varchar(99) not null,\
 sakai_id varchar(99), primary key (id) ); \
@@ -91,11 +91,11 @@ create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
 
 insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?)
 
-select.Person.by.id = select * from dash_person where id=?
+select.Person.by.id = select id, sakai_id, user_id from dash_person where id=?
 
-select.Person.by.userId = select * from dash_person where user_id=?
+select.Person.by.userId = select id, sakai_id, user_id from dash_person where user_id=?
 
-select.Person.by.sakaiId = select * from dash_person where sakai_id=?
+select.Person.by.sakaiId = select id, sakai_id, user_id from dash_person where sakai_id=?
 
 create.SourceType.table = create table if not exists dash_sourcetype ( id bigint not null auto_increment, identifier varchar(255) not null, \
 access_permission varchar(255), primary key (id) ); \
