--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -37,7 +37,15 @@ create.CalendarLink.table = create table dash_calendar_link ( id number not null
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
-insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id) values (dash_calendar_link_seq.nextval, ?, ?, ?)
+insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
+values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
+
+select.CalendarLinks.by.userId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person user join dash_calendar_link link on user.id=link.person_id \
+join dash_calendar_item ci on ci.id=link.item_id join dash_context site on site.id=link.context_id  \
+where user.sakai_id=? order by ci.calendar_time asc
 
 create.Context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
 create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
@@ -62,7 +70,14 @@ create.NewsLink.table = create table dash_news_link ( id number not null primary
 create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
 
-insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id) values (dash_news_link_seq.nextval, ?, ?, ?)
+insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
+
+select.NewsLinks.by.userId = select ci.id as ci_id, ci.news_time as ci_news_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person user join dash_news_link link on user.id=link.person_id \
+join dash_news_item ci on ci.id=link.item_id join dash_context site on site.id=link.context_id  \
+where user.sakai_id=? order by ci.news_time desc
 
 create.Person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
 create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
