Added simple UI Added API methods and impls to support UI
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312833 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -30,6 +30,22 @@ site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
+select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person user join dash_calendar_link link on user.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where user.sakai_id=? and site.context_id=? order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person user join dash_calendar_link link on user.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where user.sakai_id=? order by ci.calendar_time asc
+
 exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
@@ -76,6 +92,22 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
+
+select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person user join dash_news_link link on user.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where user.sakai_id=? and site.context_id=? order by ni.news_time desc
+
+select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person user join dash_news_link link on user.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where user.sakai_id=? order by ni.news_time desc
 
 create.NewsLink.table = create table if not exists dash_news_link ( id bigint not null auto_increment, person_id bigint not null, \
 context_id bigint not null, item_id bigint not null, hidden bit default 0, sticky bit default 0, \
