--- a/tool/src/java/org/sakaiproject/dash/tool/MyApplication.properties
+++ b/tool/src/java/org/sakaiproject/dash/tool/MyApplication.properties
@@ -1,12 +1,12 @@
 
 # This is the main properties file for our application. Internationalise via MyApplication_es.properties for example.
 
-page.title = My Application
+page.title = Dashboard
 
-link.first = Home
-link.first.tooltip = Go to the home page
+link.first = Dash
+link.first.tooltip = Go to the dashboard page
 
-link.second = Second Page
+link.second = Options
 link.second.tooltip = This is another page
 
 # An example of parameter substitution
