DASH-10 Added logic-layer methods, DAO methods and SQL to remove dashboard items and links.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312837 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -15,6 +15,8 @@ create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
+delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
+
 insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context_id) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
@@ -36,6 +38,8 @@ exists.CalendarItem.by.entityReference = select * from dash_calendar_item where 
 create.CalendarLink.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
+
+delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
 
 insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
 values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
@@ -64,11 +68,15 @@ create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 
+delete.NewsItem.by.id = delete from dash_news_item where id=?
+
 insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 create.NewsLink.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
+
+delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 
 insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
 
