--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -14,6 +14,8 @@ entity_ref varchar(300) not null, entity_type bigint not null, context_id bigint
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
+delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
+
 insert.CalendarItem = insert into dash_calendar_item (calendar_time, title , access_url, entity_ref, entity_type, context_id) values (?, ?, ?, ?, ?, ?)
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
@@ -55,6 +57,8 @@ person_id bigint not null, context_id bigint not null, item_id bigint not null, 
 sticky bit default 0, unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky)
 
+delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
+
 insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id, hidden, sticky) values \
 (?, ?, ?, ?, ?)
 
@@ -75,6 +79,8 @@ title varchar(255) not null, access_url varchar(1024) not null, entity_ref varch
 context_id bigint not null, primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
+
+delete.NewsItem.by.id = delete from dash_news_item where id=?
 
 insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, entity_type, context_id) \
 values (?, ?, ?, ?, ?, ?)
@@ -113,6 +119,8 @@ create.NewsLink.table = create table if not exists dash_news_link ( id bigint no
 context_id bigint not null, item_id bigint not null, hidden bit default 0, sticky bit default 0, \
 unique (person_id, context_id, item_id), primary key (id) ); \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
+
+delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 
 insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
 
