DASH-3 Added methods to logic-layer and DAO to revise title and/or time of CalendarItem and title of NewsItem.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312839 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -48,6 +48,12 @@ from dash_person user join dash_calendar_link link on user.id=link.person_id joi
 join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where user.sakai_id=? order by ci.calendar_time asc
 
+update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
+
+update.CalendarItem.title = update dash_calendar_item set title=? where id=?
+
+update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
+
 exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
@@ -114,6 +120,8 @@ site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person user join dash_news_link link on user.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where user.sakai_id=? order by ni.news_time desc
+
+update.NewsItem.title = update dash_news_item set title=? where id=?
 
 create.NewsLink.table = create table if not exists dash_news_link ( id bigint not null auto_increment, person_id bigint not null, \
 context_id bigint not null, item_id bigint not null, hidden bit default 0, sticky bit default 0, \
