--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -31,6 +31,12 @@ site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?
 
+update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
+
+update.CalendarItem.title = update dash_calendar_item set title=? where id=?
+
+update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
+
 exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
@@ -71,6 +77,8 @@ create unique index dash_news_entity_idx on dash_news_item (entity_ref)
 delete.NewsItem.by.id = delete from dash_news_item where id=?
 
 insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context_id) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+
+update.NewsItem.title = update dash_news_item set title=? where id=?
 
 create.NewsLink.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
